@@ -56,6 +56,8 @@ Bunny, large bunny and mega-large bunny.
 Mouse.
 Torturing devices.
 Vacuum cleaner.
+Rolling pin.
+Frying pan.
 
 //Fabrick belts and whips seem to not be clearly visible from a wooden parquet. (might have something to do with my red-green color blindness though)
 //Small, medium and large chests (one is probably already done...)
