@@ -34,6 +34,7 @@ sandals of Hermes - flying
 //girdle of carrying - +x% carrying strength
 amulet of improbability - causes odd improbabilities
 spiked gauntlets
+night vision googles - infravision
 
 Other equipment:
 
