@@ -460,4 +460,4 @@ Options for sorting massacre history
 Potion of receive random stat (better name needed)
 Options for sorting massacre history.
 There should be a special effect for zapping a banana.
-
+More replies for dogs.
